@@ -58,7 +58,7 @@ public class RepositoryImpl implements Repository {
     public void delete(int id, EntityAttributes enumAttributes) {
         String tableName = enumAttributes.name();
         String deletedAttribute = tableName + "_deleted";
-        String idAttribute = enumAttributes.getAttributes().get(0);
+        String idAttribute = tableName + "_id";
         String query = "UPDATE escaperoomdb." + tableName +
                 " SET " + deletedAttribute + " = 1 " +
                 "WHERE " + idAttribute + " = ?";
@@ -79,7 +79,7 @@ public class RepositoryImpl implements Repository {
                 query.append(", ");
             }
         }
-        query.append(" WHERE ").append(attributes.get(0)).append(" = ?;");
+        query.append(" WHERE ").append(attributes.getFirst()).append(" = ?;");
         values.add(String.valueOf(entity.getId()));
         String queryString = query.toString();
         Serializer.serialize(queryString, enumAttributes, "update", values);
@@ -106,5 +106,6 @@ public class RepositoryImpl implements Repository {
         String queryString = query.toString();
         logger.info("Query created and formatted:\n[" + queryString + "]");
         serialize(queryString, enumAttributes, "set", attributes);
+        serializeUpdate(queryString, enumAttributes, "set", attributes);
     }
 }
